# rm_exam

./: README.md
homework/src/simple_shooter/: CMakeLists.txt  package.xml
homework/src/simple_shooter/launch/: shooter_launch.py
homework/src/simple_shooter/src/: shooter.cpp
homework_bringup/: CMakeLists.txt  package.xml
homework_bringup/launch/: bringup.launch.py
homework_bringup/src/: shooter.cpp  shooter.h
